# p2p_demo

./: .gitattributes  .gitignore  .gitmodules  README.md  p2p项目介绍.md
utils/: CMakeLists.txt  bin  build.sh  ioctl_parallel_test_ftog_gtof.cpp  tvm_byp_test.cpp
utils/gpuctl/: .gpuctl.mod.cmd  .gpuctl.o.cmd  gpuctl.mod.c  modules.order
utils/gpuctl/gpuctl/: .Module.symvers.cmd  .gpuctl.ko.cmd  .gpuctl.mod.o.cmd  .modules.order.cmd  Makefile  Module.symvers  gpuctl.ko  gpuctl.mod
utils/gpuctl/src/: .gpuctl.o.cmd  .nvfs-p2p.o.cmd
utils/include/: libxdma_api.h  p2p.h  pcie_rw.h  regmap.h
utils/src/: dma_utils.c  p2p.cc  pcie_rw.c
utils/tools/: dma_to_device.c
utils/usr/: .Makefile.swp  Makefile  ftog  ftogbyp  ftogprf  ftogtest  ftoh  ftohtogprf  gpu_read_memory  gpu_read_memory.cu  gpu_read_memory.cuh  gpuctl.c  gtofprf  gtohprf  gtohtofprf  htof  htog  ioctl_parallel_test_ftog_gtof.cpp  ioctl_test_ftog.d  ioctl_test_ftogbyp.d  ioctl_test_gtof.d  jdrenjisuo@202.117.56.202  p2ptest
utils/usr/src/: Makefile  gpu_ftog.cpp  gpu_mem.ptx  ioctl_parallel_test.cpp  ioctl_parallel_test_ftog.cpp  ioctl_perftest_ftog.cpp  ioctl_test_  (+12 more)
utils/xdma/: .Module.symvers.cmd  .cdev_bypass.o.cmd  .cdev_ctrl.o.cmd  .cdev_events.o.cmd  .cdev_sgdma.o.cmd  .cdev_xvc.o.cmd  .libxdma.o.cmd  .modules.order.cmd  .xdma.ko.cmd  .xdma.mod.cmd  .xdma.mod.o.cmd  .xdma.o.cmd  .xdma_cdev.o.cmd  .xdma_mod.o.cmd  .xdma_thread.o.cmd  Makefile  cdev_ctrl.c  cdev_sgdma.c  cdev_sgdma.h  ioctl_write_test_parallel.c  libxdma.c  libxdma.h  modules.order  q_demo.cpp  xdma.mod  xdma.mod.c  xdma_mod.c
(+74 files in other folders)
